Jenkins book: Google Guice (trunk) and Jenkins (master) jobs added