@@ -51,6 +51,70 @@
                             </job>
                         </configuration>
                     </execution>
+
+                    <execution>
+                        <id>generate-guice-jenkins-jobs</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${user.home}/.jenkins/jobs</outputDirectory>
+                            <generationPom>
+                                http://github.com/evgeny-goldin/maven-plugins-test/blob/master/maven-jenkins-plugin/jenkins-book/pom.xml
+                            </generationPom>
+                            <jenkinsUrl>http://evgeny-goldin.org/jenkins</jenkinsUrl>
+                            <timestamp>false</timestamp>
+                            <jobs>
+                                <job>
+                                    <id>google-guice-trunk</id>
+                                    <description>Building Google Guice trunk</description>
+                                    <descriptionTable>
+                                        <row>
+                                            <key>Project Page</key>
+                                            <value><![CDATA[<a href="http://code.google.com/p/google-guice/"><b><code>code.google.com/p/google-guice</code></b></a>]]></value>
+                                            <escapeHTML>false</escapeHTML>
+                                            <bottom>false</bottom>
+                                        </row>
+                                    </descriptionTable>
+                                    <jdkName>jdk1.6.0</jdkName>
+                                    <mavenName>apache-maven-3</mavenName>
+                                    <mavenOpts>-Xmx256m -XX:MaxPermSize=128m</mavenOpts>
+                                    <daysToKeep>5</daysToKeep>
+                                    <useUpdate>false</useUpdate>
+                                    <mavenGoals>-e clean install</mavenGoals>
+                                    <trigger>
+                                        <type>timer</type>
+                                        <expression>0 0 * * ?</expression>
+                                    </trigger>
+                                    <repository>
+                                        <remote>http://google-guice.googlecode.com/svn/trunk/</remote>
+                                    </repository>
+                                    <mail>
+                                        <recipients>evgenyg@gmail.com jenkins@evgeny-goldin.org</recipients>
+                                    </mail>
+                                </job>
+
+                                <job>
+                                    <id>jenkins-master</id>
+                                    <jdkName>jdk1.6.0</jdkName>
+                                    <numToKeep>5</numToKeep>
+                                    <mavenName>apache-maven-3</mavenName>
+                                    <trigger>
+                                        <type>timer</type>
+                                        <expression>0 1 * * ?</expression>
+                                    </trigger>
+                                    <scmType>git</scmType>
+                                    <repository>
+                                        <remote>git://github.com/jenkinsci/jenkins.git</remote>
+                                    </repository>
+                                    <mail>
+                                        <recipients>evgenyg@gmail.com jenkins@evgeny-goldin.org</recipients>
+                                    </mail>
+                                </job>
+                            </jobs>
+                        </configuration>
+                    </execution>
                 </executions>
             </plugin>
 
